# web-search-dictionary

./: .gitignore  Dockerfile  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: add_to_project.yml  commit.yml  release.yml
docs/: README.md
tests/: test.html  test_fetch.py  test_parser.py  test_selenium.py  test_websearchdict.py  test_websearchdict_google.py  test_websearchdict_wiktionary.py  test_wsd.py
websearchdict/: __init__.py
websearchdict/dictionary/: entry.py
websearchdict/web/: automation.py  constants.py  deprecated.py  fetch.py  parser.py  structure.py
wsd/: __init__.py
wsd/dictionary/: entry.py
wsd/web/: fetch.py  parser.py
