[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "websearchdict"
version = "0.0.1"
authors = [
  { name="nickumia", email="nickumia6@gmail.com" },
]
description = "A Dictionary API based on web searches (mainly just google search haha)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  'lxml>=4.7.1',
  'requests',
  'selenium'
]

[tool.hatchling.module]
name = "websearchdict"

[tool.hatchling.sdist]
include = [
  "websearchdict/",
]

[project.urls]
"Homepage" = "https://github.com/nickumia/web-search-dictionary"
"Bug Tracker" = "https://github.com/nickumia/web-search-dictionary/issues"
